<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/signupname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:autofillHints="no"
        android:background="@drawable/name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/maincolour"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/signupemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="no"
        android:background="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/maincolour"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/signupmobileno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupemail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="no"
        android:background="@drawable/mobile_no"
        android:ems="10"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:textColor="@color/maincolour"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/signupaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupmobileno"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/address"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textColor="@color/maincolour"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/signuppass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupaddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/maincolour"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/signupcpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signuppass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="no"
        android:background="@drawable/confirm_password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/maincolour"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        tools:ignore="RtlSymmetry" />


    <Button
        android:id="@+id/signupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupcpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/signupbutton"
        app:backgroundTint="@color/maincolour"
        app:backgroundTintMode="src_in" />

    <TextView
        android:id="@+id/logintv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/loginif_have_account" />

</RelativeLayout>